# LambertCalculator

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data/: InputData.txt  LambertSolutionDataLong.txt  LambertSolutionDataShort.txt  PlanetsData.txt  TrajectoryPoints.txt  TransferData.txt  TransferOrbitalData.txt
src/: CMakeLists.txt  main.c
src/post/: dataAnalysis.m  functionImportData.m  functionImportInputData.m  functionImportTransferData.m
src/post/data/: InputData.txt  LambertSolutionDataLong.txt  LambertSolutionDataShort.txt  TrajectoryPoints.txt  TransferData.txt  TransferOrbitalData.txt
src/processing/: CMakeLists.txt  arrayuts.c  arrayuts.h  ephem.c  ephem.h  inputs.c  inputs.h  keplerian.c  keplerian.h  lambert.c  lambert.h  matrixops.c  matrixops.h  postprocess.c  postprocess.h  process.c  process.h  rootFinding.c  rootFinding.h  unitconv.h
